Make special-casing of System.getProperty sound

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 Version 3.5.0, July 1, 2020
 
+The Nullness Checker now treats System.getProperty soundly.  Use
+-Alint=permitClearProperty to disable special treatment of System.getProperty
+and to permit undefining built-in system properties.
+
 Implementation details:
 Changed the types of some fields and methods from array to List:
 QualifierDefaults.validLocationsForUncheckedCodeDefaults()
