--- a/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
@@ -50,7 +50,7 @@ this.invocation.invalid=Constructor of type %s cannot call %s of type %s.
 method.invocation.invalid=call to %s not allowed on the given receiver.%nfound   : %s%nrequired: %s
 constructor.invocation.invalid=creation of %s not allowed with given receiver;%nfound   : %s%nrequired: %s
 type.arguments.not.inferred=Could not infer type arguments for %s.
-type.argument.invalid.hasqualparam=Types with qualifier parameters are not allowed as type arguments.%mfound qualifier parameter of %s hierarchy.
+type.argument.invalid.hasqualparam=Types with qualifier parameters are not allowed as type arguments.%nfound qualifier parameter of %s hierarchy.
 declaration.inconsistent.with.extends.clause=Class %s cannot extend %s
 declaration.inconsistent.with.implements.clause=Class %s cannot implement %s
 
