--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -114,7 +114,7 @@ Checker, for which you use the annotation name; see
 Section~\ref{subtyping-using}.)
 Sometimes, a checker honors multiple \emph{checkername} arguments; use
 the \code{-AshowSuppressWarningKeys} command-line option to see them.
-Using \code{"all"} as the checkername applies to all checkers; this is not
+Using \code{"allcheckers"} as the checkername applies to all checkers; this is not
 recommended, except for messages common to all checkers such as
 purity-related messages when using \<-AcheckPurityAnnotations>.
 
@@ -147,6 +147,8 @@ We recommend using
 the longest possible message key; a short message might suppress more
 warnings than you expect.
 
+The special messagekey ``\<all>'' means to suppress all warnings.
+
 If the \emph{checkername} part is omitted, the \<@SuppressWarnings> applies
 to all checkers.
 If the \emph{messagekey} part is omitted, the \<@SuppressWarnings> applies
@@ -158,6 +160,11 @@ the \code{"\emph{checkername}"} or \code{"\emph{checkername}:\emph{messagekey}"}
 format, as in
 \<@SuppressWarnings("nullness")> or
 \<@SuppressWarnings("nullness:assignment.type.incompatible")>.
+For example, \<@SuppressWarnings("assignment.type.incompatible")> and
+\<@SuppressWarnings("all")> have no effect (they are ignored) when
+\code{-ArequirePrefixInWarningSuppressions} is used.  You can use
+\<@SuppressWarnings("allcheckers")> to suppress all Checker Framework
+warnings.
 
 %% This is true, but relevant mostly to developers, not users.
 % For a list of all message keys for a given checker, see two files:
