--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -792,6 +792,10 @@ Miscellaneous debugging options; see Section~\ref{creating-debugging-options-mis
 Print information about the git repository from which the Checker Framework
 was compiled.
 
+\item
+ \<-AdumpOnErrors>
+Prints the stack trace when the checker framework encounters an error.
+
 \end{itemize}
 
 
