--- a/docs/manual/subtyping-checker.tex
+++ b/docs/manual/subtyping-checker.tex
@@ -82,7 +82,7 @@ annotation, with the argument being the unqualified, uncapitalized name of
 any of the annotations passed to \code{-Aquals}.  This will suppress all
 warnings, regardless of which of the annotations is involved in the
 warning.  (As a matter of style, you should choose one of the annotations
-as your \code{@SuppressWarnings} key and stick with it.)
+as your \code{@SuppressWarnings} string and stick with it.)
 
 
 \sectionAndLabel{Subtyping Checker example\label{encrypted-example}}{subtyping-example}
