--- a/changelog.txt
+++ b/changelog.txt
@@ -23,6 +23,8 @@ QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_BOTTOM
 In AbstractQualifierPolymorphism, use AnnotationMirrors instead of sets of
 annotation mirrors.
 
+Renamed SuppressWarningsKeys to SuppressWarningsPrefix
+
 ---------------------------------------------------------------------------
 
 Version 3.4.1, June 1, 2020
