--- a/changelog.txt
+++ b/changelog.txt
@@ -23,7 +23,9 @@ QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_BOTTOM
 In AbstractQualifierPolymorphism, use AnnotationMirrors instead of sets of
 annotation mirrors.
 
-Renamed SuppressWarningsKeys to SuppressWarningsPrefix
+Renamed meta-annotation SuppressWarningsKeys to SuppressWarningsPrefix
+Renamed SourceChecker#getSuppressWarningsKeys(...) to getSuppressWarningsPrefixes
+Renamed SubtypingChecker#getSuppressWarningsKeys to getSuppressWarningsPrefixes
 
 ---------------------------------------------------------------------------
 
