Edits from code review

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -699,7 +699,7 @@ Type-checking modes:  enable/disable functionality
   \<-ArequirePrefixInWarningSuppressions> command-line argument to ensure
   your \<@SuppressWarnings> always use a \<\emph{checkername}:> prefix.
 \item \<-ArequirePrefixInWarningSuppressions>
-  Require that the key in a warning suppression annotation begin with a checker
+  Require that the string in a warning suppression annotation begin with a checker
   name.  Otherwise, the suppress warning annotation does not
   suppress any warnings.  For example, if this command-line option is
   supplied, then \<@SuppressWarnings("assignment.type.incompatible")> has no effect, but
