--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -1977,7 +1977,7 @@ as about assignments or method overriding.
 
 It is not possible to completely disable initialization checking while
 retaining nullness checking.  The ``initialization'' warning suppression
-string (without a period) has the same effect as the ``nullness'' string:  both
+string (without a period) has the same effect as ``nullness'':  both
 of them disable all nullness and initialization checking.  That is because
 of an implementation detail of the Nullness and Initialization Checkers:
 they are actually the same checker, rather than being two separate checkers
