--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 Version 3.5.0, July 1, 2020
 
-Use "allcheckers:" instead of "all:" as a prefix in a warning suppression key.
+Use "allcheckers:" instead of "all:" as a prefix in a warning suppression string.
 Writing `@SuppressWarnings("allcheckers")` means the same thing as
 `@SuppressWarnings("all")`, unless the `-ArequirePrefixInWarningSuppressions`
 command-line argument is supplied.  See the manual for details.
@@ -8,27 +8,28 @@ command-line argument is supplied.  See the manual for details.
 It is no longer necessary to pass -Astubs=checker.jar/javadoc.astub when
 compiling a program that uses Javadoc classes.
 
+Renamed command-line arguments:
+ -AshowSuppressWarningKeys to -AshowSuppressWarningsStrings
+
 The Nullness Checker now treats `System.getProperty()` soundly.  Use
 `-Alint=permitClearProperty` to disable special treatment of
 `System.getProperty()` and to permit undefining built-in system properties.
 
-Renamings:
- -AshowSuppressWarningKeys to -AshowSuppressWarningsStrings
-
 Implementation details:
+
 Changed the types of some fields and methods from array to List:
-QualifierDefaults.validLocationsForUncheckedCodeDefaults()
-QualifierDefaults.STANDARD_CLIMB_DEFAULTS_TOP
-QualifierDefaults.STANDARD_CLIMB_DEFAULTS_BOTTOM
-QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_TOP
-QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_BOTTOM
+ * QualifierDefaults.validLocationsForUncheckedCodeDefaults()
+ * QualifierDefaults.STANDARD_CLIMB_DEFAULTS_TOP
+ * QualifierDefaults.STANDARD_CLIMB_DEFAULTS_BOTTOM
+ * QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_TOP
+ * QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_BOTTOM
 
 In AbstractQualifierPolymorphism, use AnnotationMirrors instead of sets of
 annotation mirrors.
 
-Renamed meta-annotation SuppressWarningsKeys to SuppressWarningsPrefix
-Renamed SourceChecker#getSuppressWarningsKeys(...) to getSuppressWarningsPrefixes
-Renamed SubtypingChecker#getSuppressWarningsKeys to getSuppressWarningsPrefixes
+Renamed meta-annotation SuppressWarningsKeys to SuppressWarningsPrefix.
+Renamed SourceChecker#getSuppressWarningsKeys(...) to getSuppressWarningsPrefixes.
+Renamed SubtypingChecker#getSuppressWarningsKeys to getSuppressWarningsPrefixes.
 
 ---------------------------------------------------------------------------
 
