Add anchors for steps in "tips for creating a checker"

--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -240,6 +240,7 @@ Here is a good way to proceed.
 
 \begin{enumerate}
 \item
+\label{creating-tips-write-manual}
   Write the user manual.  Do this before you start coding.  The manual
   explains the type system, what it guarantees, how to use it, etc., from
   the point of view of a user.  Writing the manual will help you flesh out
@@ -260,6 +261,7 @@ Here is a good way to proceed.
   your design.
 
 \item
+\label{creating-tips-implement-qualifiers}
   Implement the type qualifiers and hierarchy
   (Section~\ref{creating-typequals}).
 
@@ -282,6 +284,7 @@ Here is a good way to proceed.
   (\chapterpageref{subtyping-checker}).
 
 \item
+\label{creating-tips-implement-checker}
   Write the checker class itself
   (Section~\ref{creating-compiler-interface}).
 
@@ -294,6 +297,7 @@ Here is a good way to proceed.
 \end{Verbatim}
 
 \item
+\label{creating-tips-test-infrastructure}
   Test infrastructure.
   If your checker source code is in a clone of the Checker Framework
   repository, integrate your checker with the Checker Framework's Gradle
