Address review feedback.

--- a/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
@@ -24,7 +24,7 @@ type.invalid.conflicting.annos=invalid type: conflicting annotations %s in type 
 type.invalid.too.few.annotations=invalid type: missing annotations %s in type "%s"
 type.invalid.annotations.on.use=invalid type: annotations %s conflict with declaration of type %s
 cast.unsafe=cast from "%s" to "%s" cannot be statically verified
-invariant.cast.unsafe=cast from "%s" to "%s" cannot be statically verified
+invariant.cast.unsafe=cannot cast from "%s" to "%s"
 cast.unsafe.constructor.invocation=constructor invocation cast from "%s" to "%s" cannot be statically verified
 exception.parameter.invalid=invalid type in catch argument.%nfound   : %s%nrequired: %s
 throw.type.invalid=invalid type thrown.%nfound   : %s%nrequired: %s
@@ -99,7 +99,7 @@ lambda.unimplemented=This version of the Checker Framework does not type-check l
 methodref.inference.unimplemented=This version of the Checker Framework does not type-check method references with implicit type arguments.
 
 invalid.polymorphic.qualifier.use=Cannot use polymorphic qualifier %s on a field unless the class is annotated with @HasQualifierParameter
-missing.has.qual.param=Missing @HasQualifierParameter.%nClass extends or implements a type that has a qualifier parameter.
+missing.has.qual.param=Missing @HasQualifierParameter for hierarchy %s.%nClass extends or implements a type that has a qualifier parameter.
 conflicting.qual.param=Conflicting @HasQualifierParameter.%nClass has both @HasQualifierParameter and @NoQualifierParameter for %s.
 
 
