--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,9 @@ The Nullness Checker now treats `System.getProperty()` soundly.  Use
 `-Alint=permitClearProperty` to disable special treatment of
 `System.getProperty()` and to permit undefining built-in system properties.
 
+Add support for class qualifier parameters.  See "Class qualifier parameters"
+section in the manual.
+
 Implementation details:
 Changed the types of some fields and methods from array to List:
 QualifierDefaults.validLocationsForUncheckedCodeDefaults()
