--- a/docs/manual/subtyping-checker.tex
+++ b/docs/manual/subtyping-checker.tex
@@ -82,8 +82,8 @@ the annotations passed to \code{-Aquals}.  (See
 Section~\ref{suppresswarnings-annotation-syntax} for details about the
 \<@SuppressWarnings> syntax.)  As a matter of style, you should
 choose one of the annotations as the ``checker name'' part of the
-\code{@SuppressWarnings} string and use it consistently, to avoid
-confusion.
+\code{@SuppressWarnings} string and use it consistently; this avoids
+confusion and makes it easier to search for uses.
 
 
 \sectionAndLabel{Subtyping Checker example\label{encrypted-example}}{subtyping-example}
