--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -363,7 +363,7 @@ type refinement (Section~\ref{type-refinement}), if the
 expression appeared in a conditional test.  Each type system has its own
 rules about what type refinement it performs.
 
-The value in parentheses is a Suppresswarnings checkername,
+The value in parentheses is a lowercase checker name,
 exactly as in the \<@SuppressWarnings> annotation
 (Section~\ref{suppresswarnings-annotation-syntax}).  The same good practices apply
 as for \<@SuppressWarnings> annotations, such as writing a comment
