--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1757,6 +1757,10 @@ should only do it if you have discovered a bug in a checker, you have
 already reported the bug, and you want to continue using the checker on a
 large codebase without being inundated in stack traces.
 
+\item \code{-AdumpOnErrors}: Outputs the stack trace of the program when the
+Checker Framework encounters an error or warning. The option also requires a
+boolean parameter to enables its functionality (e.g. \code{-AdumpOnErrors=true}).
+
 \end{itemize}
 
 
