--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -790,7 +790,7 @@ export PATH=$CHECKERFRAMEWORK/checker/bin:${PATH}
 
 The Checker Framework's \code{javac} ensures that all required
 libraries are on your classpath and boot classpath, but is otherwise
-identical to the Type Annotations compiler.
+identical to the javac Java compiler.
 
 Putting the Checker Framework's \<javac> earlier in your \<PATH> will
 ensure that the Checker Framework's version is used.
