Improve installation instructions

--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -717,7 +717,8 @@ command-line argument
 
 To try the Nullness Checker on a source file that uses the \refqualclass{checker/nullness/qual}{NonNull} qualifier,
 use the following command (where \code{javac} is the Checker Framework compiler that
-is distributed with the Checker Framework):
+is distributed with the Checker Framework, see Section~\ref{javac-wrapper}
+for details):
 
 %BEGIN LATEX
 \begin{smaller}
