Fix LaTeX error

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -378,7 +378,7 @@ one of them.  However, if you are using the Windows command shell, you must
 use the last one.
 % Is the last one required for Cygwin, as well as for the Windows command shell?
 Adjust the pathnames if you have installed the Checker Framework somewhere
-other than \<${HOME}/checker-framework-3.4.1/>.
+other than \<\${HOME}/checker-framework-3.4.1/>.
 
 
 \begin{itemize}
