--- a/changelog.txt
+++ b/changelog.txt
@@ -28,6 +28,8 @@ The Nullness Checker now treats `System.getProperty()` soundly.  Use
 Add support for class qualifier parameters.  See "Class qualifier parameters"
 section in the manual.
 
+The Dataflow Framework now also supports backward analysis.
+
 Implementation details:
 
 Changed the types of some fields and methods from array to List:
@@ -36,6 +38,13 @@ Changed the types of some fields and methods from array to List:
  * QualifierDefaults.STANDARD_CLIMB_DEFAULTS_BOTTOM
  * QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_TOP
  * QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_BOTTOM
+
+Dataflow Framework: Analysis is now an interface, added AbstractAnalysis,
+ForwardAnalysis, ForwardTransferFunction, ForwardAnalysisImpl,
+BackwardAnalysis, BackwardTransferFunction, BackwardAnalysisImpl.
+Existing code is easy to adapt:
+    `extends Analysis<V, S, T>` => `extends ForwardAnalysisImpl<V, S, T>`
+    `implements TransferFunction<V, S>` => `implements ForwardTransferFunction<V, S>`
 
 In AbstractQualifierPolymorphism, use AnnotationMirrors instead of sets of
 annotation mirrors.
