Fix broken cross-references in manual

--- a/docs/manual/interning-checker.tex
+++ b/docs/manual/interning-checker.tex
@@ -118,7 +118,7 @@ These qualifiers are part of the Interning type system:
 
 \item[\refqualclass{checker/interning/qual}{PolyInterned}]
   indicates qualifier polymorphism (see
-  Section~\ref{qualifier-polymorphism}).
+  Section~\ref{method-qualifier-polymorphism}).
 
 \end{description}
 
