Modifying documentation and requested changes

--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1784,8 +1784,7 @@ already reported the bug, and you want to continue using the checker on a
 large codebase without being inundated in stack traces.
 
 \item \code{-AdumpOnErrors}: Outputs the stack trace of the program when the
-Checker Framework encounters an error or warning. The option also requires a
-boolean parameter to enables its functionality (e.g. \code{-AdumpOnErrors=true}).
+Checker Framework encounters an error or warning.
 
 \end{itemize}
 
