--- a/docs/manual/interning-checker.tex
+++ b/docs/manual/interning-checker.tex
@@ -128,11 +128,14 @@ These qualifiers are part of the Interning type system:
 
 \item[\refqualclass{checker/interning/qual}{UsesObjectEquals}]
   is a class annotation (not a type annotation) that indicates that this class's
-  \<equals> method is the same as that of \<Object>.  In other words,
-  neither this class nor any of its superclasses overrides the \<equals>
-  method.  Since \<Object.equals> uses reference equality, this means that
-  for such a class, \<==> and \<equals> are equivalent, and so the
-  Interning Checker does not issue errors or warnings for either one.
+  \<equals> method is the same as that of \<Object>.  Since
+  \<Object.equals> uses reference equality, this means that for such a
+  class, \<==> and \<equals> are equivalent, and so the Interning Checker
+  does not issue errors or warnings for either one.
+
+  Two ways to satisfy this annotation are:  (1) neither this class nor any
+  of its superclasses overrides the \<equals> method, or (2) this class
+  defines \<equals> with body \<return this == o;>.
 
 \item[\refqualclass{checker/interning/qual}{InternMethod}]
   is a method declaration annotation that indicates that this method
