Emphasize that -AuseConservativeDefaultsForUncheckedCode suppresses warnings

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -635,7 +635,8 @@ More sound (strict) checking: enable errors that are disabled by default
   to differ, just as Java does.  See Section~\ref{covariant-type-parameters}
   and Section~\ref{invariant-arrays}.
 \item \<-AuseConservativeDefaultsForUncheckedCode>
-  Enables/disables conservative defaults in unchecked code.  Takes arguments ``source,bytecode''.
+  Enables conservative defaults, and suppresses all type-checking warnings,
+  in unchecked code.  Takes arguments ``source,bytecode''.
   ``-source,-bytecode'' is the (unsound) default setting.
   \begin{itemize}
   \item
