--- a/docs/manual/advanced-features.tex
+++ b/docs/manual/advanced-features.tex
@@ -942,6 +942,9 @@ Type systems that cannot support a run-time test are:
   \ahrefloc{aliasing-checker}{Aliasing Checker} to identify whether
   expressions have aliases (see \chapterpageref{aliasing-checker})
 \item
+  \ahrefloc{linear-checker}{Linear Checker} to control and prevent
+  re-usage of objects (see \chapterpageref{linear-checker})
+\item
   \ahrefloc{purity-checker}{Purity Checker} to identify whether
   methods have side effects (see \chapterpageref{aliasing-checker})
 \item
