--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -84,6 +84,9 @@ The Checker Framework comes with checkers for specific types of errors:
   \ahrefloc{aliasing-checker}{Aliasing Checker} to identify whether
   expressions have aliases (see \chapterpageref{aliasing-checker})
 \item
+  \ahrefloc{linear-checker}{Linear Checker} to control and prevent
+  re-usage of objects (see \chapterpageref{linear-checker})
+\item
   \ahrefloc{purity-checker}{Purity Checker} to identify whether
   methods have side effects (see \chapterpageref{purity-checker})
 \item
