--- a/docs/manual/manual.tex
+++ b/docs/manual/manual.tex
@@ -78,6 +78,9 @@ describes how to \textbf{install and use} pluggable type-checkers.
 \input{subtyping-checker.tex}
 \input{external-checkers.tex}
 
+% Less-well-tested checkers:
+\input{linear-checker.tex}
+
 %% Advanced material
 
 \input{generics.tex}
