--- a/dataflow/manual/content.tex
+++ b/dataflow/manual/content.tex
@@ -1779,7 +1779,7 @@ I feel like there is a missing cross-reference or two to this section.
 \subsection{Overview}
 
 The default flow-sensitive analysis \code{org.checkerframework.framework.flow.CFAnalysis}
-works for the qualifier hierarchy of any checker defined in the
+works for any checker defined in the
 Checker Framework.  This generality is both a strength and a weakness
 because the default analysis can always run but the facts it can
 deduce are limited.  The default analysis is extensible so checkers
