--- a/docs/manual/linear-checker.tex
+++ b/docs/manual/linear-checker.tex
@@ -43,7 +43,7 @@ public static void main() {
 \label{fig-linear-example}
 \end{figure}
 
-\section{Linear annotations\label{linear-annotations}}
+\sectionAndLabel{Linear annotations\label{linear-annotations}}
 
 The full qualifier hierarchy for the linear type system includes three
 types:
