--- a/docs/manual/linear-checker.tex
+++ b/docs/manual/linear-checker.tex
@@ -1,5 +1,5 @@
 \htmlhr
-\chapter{Linear Checker for preventing re-usability\label{linear-checker}}
+\chapterAndLabel{Linear Checker}{linear-checker}
 
 The Linear Checker implements type-checking for a linear type system.  A
 linear type system prevents re-usability:  there is only one (usable) reference
@@ -43,7 +43,7 @@ public static void main() {
 \label{fig-linear-example}
 \end{figure}
 
-\sectionAndLabel{Linear annotations\label{linear-annotations}}
+\sectionAndLabel{Linear annotations}{linear-annotations}
 
 The full qualifier hierarchy for the linear type system includes three
 types:
