--- a/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/basetype/messages.properties
@@ -14,7 +14,7 @@ return.type.incompatible=incompatible types in return.%ntype of expression: %s%n
 annotation.type.incompatible=incompatible types in annotation.%nfound   : %s%nrequired: %s
 conditional.type.incompatible=incompatible types in conditional expression.%nfound   : %s%nrequired: %s
 type.argument.type.incompatible=invalid type argument for type parameter %s of %s.%nfound   : %s%nrequired: %s
-argument.type.incompatible=invalid argument type for parameter %s of %s.%nfound   : %s%nrequired: %s
+argument.type.incompatible=invalid argument for parameter %s of %s.%nfound   : %s%nrequired: %s
 varargs.type.incompatible=incompatible types in varargs.%nfound   : %s%nrequired: %s
 type.incompatible=incompatible types.%nfound   : %s%nrequired: %s
 bound.type.incompatible=incompatible bounds in %s%ntype: %s%nupper bound: %s%nlower bound: %s
