--- a/docs/manual/accumulation-checker.tex
+++ b/docs/manual/accumulation-checker.tex
@@ -55,6 +55,11 @@ Also define a bottom type, analogous to
 \href{https://github.com/typetools/checker-framework/blob/master/framework/src/test/java/testaccumulation/qual/TestAccumulationBottom.java}{TestAccumulationBottom.java}.
 It should take no arguments, and should be a subtype of the accumulator type you defined earlier.
 
+You may also choose to define a predicate annotation, analogous to
+\href{https://github.com/typetools/checker-framework/blob/master/framework/src/test/java/testaccumulation/qual/TestAccumulationPredicate.java}{TestAccumulationPredicate.java}.
+A predicate annotation allows you to write specifications with disjunctions (the accumulation annotation implicitly already permits
+specifications with conjunctions). If you define such an annnotation, it must have a single argument named \<value> of type \<String>.
+
 \paragraphAndLabel{Setting up the checker}{accumulation-setup}
 
 Define a new class that extends \refclass{common/accumulation}{AccumulationChecker}.
@@ -62,8 +67,9 @@ It does not need any content.
 
 Define a new class that extends \refclass{common/accumulation}{AccumulationAnnotatedTypeFactory}.
 You must create a new constructor whose only argument is a \refclass{common/basetype}{BaseTypeChecker}.
-Your constructor should call the \<super> constructor defined in
-\refclass{common/accumulation}{AccumulationAnnotatedTypeFactory}.
+Your constructor should call one of the \<super> constructors defined in
+\refclass{common/accumulation}{AccumulationAnnotatedTypeFactory} (which one depends on whether or not
+you defined a predicate annotation).
 
 
 \paragraphAndLabel{Adding accumulation logic}{accumulation-accumulating}
